[3.6] bpo-34563: Fix for invalid assert on big output of multiprocessing.Process (GH-9027)

Fix for invalid assert on big output of multiprocessing.Process.

(cherry picked from commit 266f4904a222a784080e29aad0916849e507515d)